<resources>
    <string name="app_name">YouHaveTo</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- appbar -->
    <string name="appbar_scrolling_view_behavior" translatable="false">
        com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior
    </string>

    <string name="action_settings">Settings</string>
    <string name="game_view_content_description">Game view</string>

    <string name="exercise_diary">\'s 운동일지</string>
    <string name="monthly_progress">이번 달 운동 진행률</string>
    <string name="exercise_routine_diet_recommend">운동 루틴&amp;식단 추천</string>
    <string name="exercise_community">운동 커뮤니티</string>
    <string name="exercise_posting">운동 게시글 작성</string>

    <!--
    <string name="exercise_diary">Exercise Diary</string>
    <string name="monthly_progress">Monthly Progress</string>
    <string name="exercise_routine">Exercise Routine</string>
    <string name="exercise_community">Exercise Community</string>

    -->

    <string name="id">아이디</string>
    <string name="password">비밀번호</string>
    <string name="login">로그인</string>
    <string name="sign_up">회원가입</string>
    <string name="nickname">닉네임</string>
    <string name="address">주소</string>
    <string name="field">활동 지역</string>
    <string name="input_id">아이디 입력</string>
    <string name="input_password">비밀번호 입력</string>
    <string name="input_password_confirm">비밀번호 확인</string>
    <string name="input_nickname">닉네임 입력</string>
    <string name="input_address">주소 입력(ex.서울시)</string>
    <string name="input_email">이메일 입력</string>
    <string name="input_field">활동 지역 입력(ex.서울시)</string>
    <string name="find_id">아이디 찾기</string>
    <string name="find_password">비밀번호 찾기</string>
    <string name="please_input_id">아이디를 입력해주세요.</string>
    <string name="please_input_password">비밀번호를 입력해주세요.</string>
    <string name="please_input_nickname">닉네임을 입력해주세요.</string>
    <string name="please_input_email">이메일을 입력해주세요.</string>
    <string name="please_input_address">주소를 입력해주세요.(ex.서울시)</string>
    <string name="please_input_field">활동 지역을 입력해주세요.(ex.서울시)</string>
    <string name="email_authenticate">이메일 인증</string>
    <string name="complete_email_authenticate">이메일 인증 완료</string>
    <string name="authenticate">인증</string>
    <string name="input_authenticate_code">인증코드 입력</string>
    <string name="request_authenticate_code">인증코드 요청</string>
    <string name="please_input_email_code">입력된 이메일로 인증코드를 발송하였습니다. 인증코드를 입력해주세요.</string>
    <string name="id_length">아이디는 5~20자 입니다.</string>
    <string name="password_format">비밀번호는 영문 대 소문자, 숫자, 특수문자를 사용하세요. 비밀번호는 8~20자 입니다.</string>
    <string name="email_invalied_format">이메일 형식이 옳바르지 않습니다.</string>
    <string name="password_not_same">비밀번호가 일치하지 않습니다.</string>
    <string name="complete_sign_up">회원가입을 완료하였습니다.</string>
    <string name="success_sign_in">로그인 성공</string>
    <string name="change_password">비밀번호 변경</string>
    <string name="change">변경하기</string>
    <string name="health_dairy">운동 일지</string>
    <string name="cardio">유산소</string>
    <string name="weight">무산소</string>
    <string name="calendar_monday">월</string>
    <string name="calendar_tuesday">화</string>
    <string name="calendar_wednesday">수</string>
    <string name="calendar_thursday">목</string>
    <string name="calendar_friday">금</string>
    <string name="calendar_saturday">토</string>
    <string name="calendar_sunday">일</string>

    <string name="monday">월요일</string>
    <string name="tuesday">화요일</string>
    <string name="wednesday">수요일</string>
    <string name="thursday">목요일</string>
    <string name="friday">금요일</string>
    <string name="saturday">토요일</string>
    <string name="sunday">일요일</string>


    <!-- 홈 -->

    <string name="diary">일지</string>
    <string name="exercise">운동</string>
    <string name="todays_exercise">오늘의 운동</string>
    <string name="memo">메모</string>
    <string name="photo">사진</string>
    <string name="video">동영상</string>
    <string name="gallery">갤러리</string>
    <string name="add">추가</string>
    <string name="please_input">입력해주세요...</string>
    <string name="recommendation">추천</string>
    <string name="todays_challenge">오늘의 도전</string>
    <string name="hour">시간</string>
    <string name="register">등록하기</string>
    <string name="exercise_back">등</string>
    <string name="exercise_chest">가슴</string>
    <string name="exercise_shoulder">어깨</string>
    <string name="exercise_legs">하체</string>
    <string name="exercise_biceps">이두</string>
    <string name="exercise_triceps">삼두</string>
    <string name="exercise_abs">복근</string>
    <string name="exercise_cardio">유산소</string>
    <string name="etc">기타</string>
    <string name="exercise_name">운동 이름</string>
    <string name="exercise_name_weight_training">ex.스쿼드</string>
    <string name="exercise_name_cardio">ex.런닝</string>
    <string name="time">시간</string>
    <string name="minute">분</string>
    <string name="reps">회/1세트</string>
    <string name="sets">세트</string>

    <string name="read_more">더보기</string>
    <string name="read_less">닫기</string>

    <string name="cancel">취소</string>
    <string name="confirm">확인</string>
    <string name="you_can_register_six_medias">최대 6개까지 등록할 수 있습니다.</string>
    <string name="delete_diary">일지를 삭제하시겠습니까?</string>
    <string name="you_want_delete_exercise">운동을 삭제하시겠습니까?</string>
    <string name="you_want_delete_media">미디어를 삭제하시겠습니까?</string>
    <string name="you_want_delete_post">게시글을 삭제하시겠습니까?</string>

    <string name="routine">루틴</string>
    <string name="exercise_routine">운동 루틴</string>
    <string name="diet_food">다이어트 식단</string>
    <string name="recommend_todays_food">오늘의 식단 추천</string>
    <string name="recommend_routine">운동 루틴 추천</string>
    <string name="todays_food">오늘의 식단</string>
    <string name="food">식단</string>
    <string name="get_routine">루틴 추천 받기</string>
    <string name="get_diet_food">식단 추천 받기</string>
    <string name="exercise_purpose">운동 목적</string>
    <string name="muscle_gain">근육 강화</string>
    <string name="loosing_weight">체중 감량</string>
    <string name="height_weight">키∙몸무게</string>
    <string name="division">분할</string>
    <string name="day">일</string>
    <string name="cm">cm</string>
    <string name="kg">kg</string>
    <string name="recommend_result">추천 결과</string>
    <!-- 커뮤니티 -->
    <string name="now">방금</string>
    <string name="total">전체</string>
    <string name="apply">적용</string>

    <string name="category">카테고리</string>
    <string name="exercise_type">운동 종류</string>
    <string name="q_and_a">Q&amp;A</string>
    <string name="knowledge_sharing">지식공유</string>
    <string name="show_off">자랑</string>
    <string name="free">자유</string>
    <string name="assess">평가</string>
    <string name="health">헬스</string>
    <string name="pilates">필라테스</string>
    <string name="yoga">요가</string>
    <string name="jogging">조깅</string>

    <string name="post_write">게시글 쓰기</string>
    <string name="please_select_category">-카테고리을 선택해 주세요-</string>
    <string name="please_select_exercise_type">-운동 종류를 선택해 주세요-</string>
    <string name="please_input_title">제목을 입력해 주세요.</string>
    <string name="please_input_text">내용을 입력해 주세요.</string>
    <string name="media">미디어</string>
    <string name="complete">완료</string>
    <string name="post_up">게시하기</string>
    <string name="posting">게시글</string>
    <string name="edit_post">게시글 수정</string>
    <string name="edit_comment">댓글 수정</string>
    <string name="delete_post">게시글 삭제</string>
    <string name="delete_comment">댓글 삭제</string>
    <string name="accuse_post">게시글 신고</string>
    <string name="accuse_comment">댓글 신고</string>
    <string name="refresh">새로고침</string>
    <string name="member_info">회원 정보</string>
    <string name="send_message">메시지 보내기</string>
    <string name="upload_date">작성일</string>
    <string name="see_more_comment">댓글 더보기</string>
    <string name="see_comment">댓글 보기</string>
    <string name="write_comment">댓글 쓰기</string>
    <string name="add_comment">댓글 추가...</string>
    <string name="write_child_comment">답글 달기</string>
    <string name="please_write_comment">댓글을 작성해 주세요!</string>
    <string name="like">좋아요</string>
    <string name="comment">댓글</string>
    <string name="child_comment">답글</string>
    <string name="close">닫기</string>
    <string name="views">조회수</string>
    <string name="no_post">해당하는 게시물이 없어요!</string>
    <string name="no_exist_post">존재하지 않는 게시글입니다.</string>
    <string name="editing">수정하기</string>
    <!-- 마이페이지 -->
    <string name="profile_edit">프로필 수정</string>
    <string name="setting">설정</string>
    <string name="my_post">내 게시글</string>
    <string name="my_comment">내 댓글</string>


    <!-- 신체 근육 -->
    <string name="muscle_chest">대흉근</string>
    <string name="muscle_shoulder">어깨</string>
    <string name="muscle_biceps">이두근</string>
    <string name="muscle_forearms">전완근</string>
    <string name="muscle_abs">복근</string>
    <string name="muscle_quadriceps">대퇴사두근</string>
    <string name="muscle_calves">비복근</string>

    <string name="muscle_trap">승모근</string>
    <string name="muscle_lat">광배근</string>
    <string name="muscle_triceps">삼두근</string>
    <string name="muscle_glutes">대둔근</string>
    <string name="muscle_hamstrings">햄스트링</string>


    <string name="save">저장</string>
    <string name="identification">본인 확인</string>
    <string name="select_body_part">운동할 부위를 선택해 주세요. (최대 3개)</string>
    <string name="exercise_posture_feedback">운동 자극 피드백</string>
    <string name="exercise_posture_feedback_explain">운동 후 자극 부위를 선택하여 피드백을 받아보세요!</string>
    <string name="get_feedback">피드백 받기</string>
    <string name="no_save_without_exercise">오늘의 운동을 추가하지 않으면 저장되지 않습니다.</string>
    <string name="cancel_write">작성을 취소하시겠습니까?</string>
    <string name="change_to_base_img">기본 이미지로 변경</string>
    <string name="select_img_in_gallery">앨범에서 사진 선택</string>
    <string name="delete_member">회원 탈퇴</string>
    <string name="app_explain">YouHaveTo 이용 가이드</string>
    <string name="open_source_license">오픈소스 라이선스</string>
    <string name="notification">알림</string>
    <string name="logout">로그아웃</string>
    <string name="input_new_password">새 비밀번호 입력</string>
    <string name="input_new_password_confirm">새 비밀번호 확인</string>
    <string name="loading_loss_warning">로딩 중 앱에 종료하면 데이터가 손실될 수 있습니다.</string>
    <string name="chatting">채팅</string>
    <string name="you_want_log_out">로그아웃 하시겠습니까?</string>
    <string name="you_want_delete_comment">댓글을 삭제하시겠습니까?</string>
    <string name="no_comment">작성한 댓글이 없어요!</string>
    <string name="notification_update_later">해당 기능은 추후 업데이트 될 예정입니다!</string>
    <string name="try_add_media">미디어를\n추가해 보세요!</string>
    <string name="you_want_delete_member">회원 탈퇴 하시겠습니까?</string>
    <string name="withdrawal">탈퇴</string>
</resources>