<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="20dp"
    android:background="@color/main_black">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/change_password"
        android:textColor="@color/white"
        style="@style/BoldTextStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/layout_password"/>

    <LinearLayout
        android:id="@+id/layout_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="@id/tv_title"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        app:layout_constraintEnd_toEndOf="@id/tv_title"
        app:layout_constraintBottom_toTopOf="@id/btn_cancel">

        <EditText
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_edge_red_rounded"
            android:textColor="@color/white"
            android:hint="@string/input_new_password"
            android:inputType="textPassword"
            android:textColorHint="@color/main_gray"
            style="@style/NormalTextStyle"
            android:paddingHorizontal="14dp"
            android:paddingVertical="12dp"
            android:drawableStart="@drawable/ic_password_small"
            android:drawablePadding="8dp"
            android:drawableTint="@color/main_red_light"/>

        <TextView
            android:id="@+id/tv_pw_warning"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password_format"
            android:textColor="@color/main_red_light"
            style="@style/SmallTextStyle"
            android:lineSpacingExtra="3dp"
            android:visibility="gone"
            android:layout_marginTop="5dp"
            android:layout_marginStart="5dp"/>

        <EditText
            android:id="@+id/edt_password_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_edge_red_rounded"
            android:layout_marginTop="3dp"
            android:textColor="@color/white"
            android:hint="@string/input_new_password_confirm"
            android:inputType="textPassword"
            android:textColorHint="@color/main_gray"
            style="@style/NormalTextStyle"
            android:paddingHorizontal="14dp"
            android:paddingVertical="12dp"
            android:drawableStart="@drawable/ic_password_small"
            android:drawablePadding="8dp"
            android:drawableTint="@color/main_red_light"/>

        <TextView
            android:id="@+id/tv_pw_check_warning"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password_not_same"
            android:textColor="@color/main_red_light"
            style="@style/SmallTextStyle"
            android:lineSpacingExtra="3dp"
            android:visibility="gone"
            android:layout_marginTop="5dp"
            android:layout_marginStart="5dp"/>

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_cancel"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:text="@string/cancel"
        android:textColor="@color/white"
        style="@style/NormalTextStyle"
        android:background="@drawable/sel_btn_red_pressed"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="@id/layout_password"
        app:layout_constraintTop_toBottomOf="@id/layout_password"
        app:layout_constraintEnd_toStartOf="@id/btn_ok"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_ok"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:text="@string/confirm"
        android:textColor="@color/white"
        style="@style/NormalTextStyle"
        android:background="@drawable/sel_btn_red_pressed"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/layout_password"
        app:layout_constraintStart_toEndOf="@id/btn_cancel"
        app:layout_constraintEnd_toEndOf="@id/layout_password"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>