<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_main"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_black"
    tools:context=".features.login.LoginActivity">

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="150dp"
        android:layout_height="75dp"
        android:src="@drawable/logo"
        app:layout_constraintVertical_bias="0.15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <EditText
        android:id="@+id/edt_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_edge_red_rounded"
        android:layout_marginHorizontal="60dp"
        android:layout_marginTop="50dp"
        android:text=""
        android:textSize="16sp"
        android:textColor="@color/white"
        android:hint="@string/input_id"
        android:textColorHint="@color/main_gray"
        android:padding="14dp"
        android:inputType="text"
        android:drawableStart="@drawable/ic_input_id"
        android:drawablePadding="8dp"
        android:drawableTint="@color/main_red_light"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_logo"
        app:layout_constraintEnd_toEndOf="parent"/>


    <EditText
        android:id="@+id/edt_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_edge_red_rounded"
        android:layout_marginHorizontal="60dp"
        android:layout_marginTop="15dp"
        android:text=""
        android:textSize="16sp"
        android:textColor="@color/white"
        android:hint="@string/input_password"
        android:inputType="textPassword"
        android:textColorHint="@color/main_gray"
        android:padding="14dp"
        android:drawableStart="@drawable/ic_password_small"
        android:drawablePadding="8dp"
        android:drawableTint="@color/main_red_light"
        app:layout_constraintTop_toBottomOf="@id/edt_id"
        app:layout_constraintStart_toStartOf="@id/edt_id"
        app:layout_constraintEnd_toEndOf="@id/edt_id"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/sel_btn_red_pressed"
        android:layout_marginHorizontal="60dp"
        android:text="@string/login"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginBottom="90dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="@id/btn_login"
        app:layout_constraintTop_toBottomOf="@id/btn_login"
        app:layout_constraintEnd_toEndOf="@id/btn_login">

        <TextView
            android:id="@+id/tv_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:layout_weight="0.3"/>

        <TextView
            android:id="@+id/tv_find_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/find_id"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:layout_weight="0.3"
            android:gravity="center"/>

        <TextView
            android:id="@+id/tv_find_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/find_password"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:layout_weight="0.3"
            android:gravity="end"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>